objects/recordval__rv2Delta__c.object
<CustomObject>
    <fields>
        <fullName>recordval__Priority__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOAP</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>BULK_API</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_SYNC</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_DEPLOY</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_ASYNC</fullName>
                </value>
                <value>
                    <fullName>WEB2LEAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordval__object__c</fullName>
        <label>Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Validation Delta</label>
    <nameField>
        <displayFormat>RVD-{000000000}</displayFormat>
        <label>Record Validation Delta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Validation Deltas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>